--- a/Store/Views/Flavors/Index.cshtml
+++ b/Store/Views/Flavors/Index.cshtml
@@ -2,4 +2,21 @@
   Layout = "_Layout";
 }
 
-<h1>Flavor Index</h1>
+<h1>Flavors</h1>
+<hr>
+
+@using Store.Models
+
+@if(Model.Count == 0)
+{
+  <h2>No Flavors have been added..</h2>
+}
+else{
+@foreach (Flavor flavor in Model)
+{
+  <li>@Html.ActionLink($"{flavor.FlavorName}", "Details", new {id = flavor.FlavorId})</li>
+}
+}
+
+<p class="enlarge">@Html.ActionLink("Create Flavor", "Create", "Flavors")</p>
+<p class="enlarge">@Html.ActionLink("Main Menu", "Index", "Home")</p>
