--- a/Store/Views/Treats/Index.cshtml
+++ b/Store/Views/Treats/Index.cshtml
@@ -2,4 +2,22 @@
   Layout = "_Layout";
 }
 
-<h1>Treat Index</h1>
+<h1>Treats</h1>
+<hr>
+
+@using Store.Models
+
+@if(Model.Count == 0)
+{
+  <h2>No treats yet..</h2>
+}
+else
+{
+  @foreach(Treat treat in Model)
+  {
+    <li>@Html.ActionLink($"{treat.TreatName}", "Details", new { id = treat.TreatId })</li>
+  }
+}
+
+<p class="enlarge">@Html.ActionLink("Create Treat", "Create", "Treats")</p>
+<p class="enlarge">@Html.ActionLink("Main Menu", "Index", "Home")</p>
