show details of specific treat

--- a/Store/Views/Treats/Details.cshtml
+++ b/Store/Views/Treats/Details.cshtml
@@ -3,3 +3,10 @@
 }
 
 <h1>Treat Details</h1>
+<hr>
+
+@model Store.Models.Treat
+
+<h1>@Html.DisplayFor(model => model.TreatName)</h1>
+
+<p class="enlarge">@Html.ActionLink("Edit Treat", "Edit")</p>
