--- a/Store/Views/Home/Index.cshtml
+++ b/Store/Views/Home/Index.cshtml
@@ -3,3 +3,7 @@
 }
 
 <h1>Home Index</h1>
+
+
+<p>@Html.ActionLink("Manage Treats", "Index", "Treats")</p>
+<p>@Html.ActionLink("Manage Flavors", "Index", "Flavors")</p>
