add method to check if view bag is empty and return new message if so

--- a/Store/Views/Flavors/Details.cshtml
+++ b/Store/Views/Flavors/Details.cshtml
@@ -6,7 +6,40 @@
 <hr>
 
 @model Store.Models.Flavor
+@using Store.Models
 
 <h1>@Html.DisplayFor(model => model.FlavorName)</h1>
 
-<p>@Html.ActionLink("Edit Flavor", "Edit")</p>
+@if (@Model.JoinEntities.Count == 0 && @ViewBag.Treats.Count == 0)
+{
+  <p class="text-danger" style="font-weight: bold;">*No treats are available*</p>
+  <p class="text-danger">Flavor cannot be assiged a treat until a flavor is added to flavor list</p>
+  <p class="enlarge" style="margin-bottom: 4%;">@Html.ActionLink("Add Treat to treat list", "Create", "Treats")</p>
+}
+else if (@Model.JoinEntities.Count == 0)
+{
+  <p class="enlarge" style="margin-bottom: 4%;">@Html.ActionLink("Add Treat to Flavor", "AddTreat", new { id = Model.FlavorId})</p>
+}
+else{
+  <h3 style="margin-bottom: 2%;">Treats:</h3>
+  <ul>
+    @foreach(TreatFlavor join in Model.JoinEntities)
+    {
+      @using (Html.BeginForm("DeleteTreat", "Flavors"))
+      {
+      <li> 
+        @join.Treat.TreatName |
+        @Html.Hidden("joinId", @join.TreatFlavorId)
+        <input type="submit" value="Delete" class="btn btn-danger btn-md"/>
+      </li>
+      }
+    }
+  </ul>
+  <p class="enlarge" style="margin-bottom: 4%;">@Html.ActionLink("Add Treat to Flavor", "AddTreat", new { id = Model.FlavorId})</p>
+}
+<hr style="font-size: 10px;">
+
+<p class="enlarge">@Html.ActionLink("Edit Flavor", "Edit", new { id = Model.FlavorId})</p>
+<p class="enlarge">@Html.ActionLink("Delete Flavor", "Delete", new { id = Model.FlavorId})</p>
+<p class="enlarge">@Html.ActionLink("View Flavors", "Index")</p>
+<p class="enlarge">@Html.ActionLink("Main Menu", "Index", "Home")</p>
