--- a/Store/Views/Flavors/Create.cshtml
+++ b/Store/Views/Flavors/Create.cshtml
@@ -8,5 +8,8 @@
 @using (@Html.BeginForm())
 {
   <h3>Flavor: @Html.TextBoxFor(model => model.FlavorName, new { placeholder="Flavor Name"})</h3>
-  <input type="submit" value="Create">
+  <input type="submit" value="Add" class="btn btn-lg btn-info" style="margin-bottom: 4%;">
 }
+
+<p class="enlarge">@Html.ActionLink("Back to Flavors", "Index", "Flavors")</p>
+<p class="enlarge">@Html.ActionLink("Main Menu", "Index", "Home")</p>
