--- a/Store/Views/Flavors/Edit.cshtml
+++ b/Store/Views/Flavors/Edit.cshtml
@@ -3,3 +3,19 @@
 }
 
 <h1>Edit Flavor</h1>
+
+@model Store.Models.Flavor
+
+<h1>Edit Flavor Info Below</h1>
+
+@using (@Html.BeginForm())
+{
+  @Html.HiddenFor(model => model.FlavorId)
+  <li>Name: @Html.EditorFor(model => model.FlavorName, new {placeholder = @Html.DisplayFor(model => model.FlavorName)})</li>
+   @* <h3>@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })</h3> *@
+  
+  <input type="submit" value="Edit" class="btn btn-lg btn-info" style="margin-bottom: 4%;"/>
+}
+
+<p class="enlarge">@Html.ActionLink("Back to Flavors", "Index")</p>
+<p class="enlarge">@Html.ActionLink("Main Menu", "Index", "Home")</p>
