add view to allow users to add a new treat

--- a/Store/Views/Treats/Create.cshtml
+++ b/Store/Views/Treats/Create.cshtml
@@ -10,3 +10,6 @@
   <h3>Treat: @Html.TextBoxFor(model => model.TreatName, new { placeholder="Treat Name"})</h3>
   <input type="submit" value="Create">
 }
+
+<p class="enlarge">@Html.ActionLink("Back to Treats", "Index")</p>
+<p class="enlarge">@Html.ActionLink("Main Menu", "Index", "Home")</p>
