--- a/Store/Views/Treats/Delete.cshtml
+++ b/Store/Views/Treats/Delete.cshtml
@@ -3,3 +3,16 @@
 }
 
 <h1>Delete Treat</h1>
+@model Store.Models.Treat
+
+<ul>
+  <li>Name: @Html.DisplayFor(model => model.TreatName)</li>
+</ul>
+
+@using (Html.BeginForm())
+{
+  <input type="submit" value="Delete" class="btn btn-danger btn-md" style="margin-bottom: 3%">
+}
+
+<p class="enlarge">@Html.ActionLink("Back to Treats", "Index")</p>
+<p class="enlarge">@Html.ActionLink("Main Menu", "Index", "Home")</p
