--- a/Store/Views/Treats/Edit.cshtml
+++ b/Store/Views/Treats/Edit.cshtml
@@ -2,4 +2,17 @@
   Layout = "_Layout";
 }
 
-<h1>Edit Treat</h1>
+@model Store.Models.Treat
+
+<h1>Edit Treat Info Below</h1>
+@using (@Html.BeginForm())
+{
+  @Html.HiddenFor(model => model.TreatId)
+  <li>Name: @Html.EditorFor(model => model.TreatName, new {placeholder = @Html.DisplayFor(model => model.TreatName)})</li>
+   @* <p>@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })</p> *@
+  
+  <input type="submit" value="Edit" class="btn btn-lg btn-info" style="margin-bottom: 4%;"/>
+}
+
+<p class="enlarge">@Html.ActionLink("Back to Treats", "Index")</p>
+<p class="enlarge">@Html.ActionLink("Main Menu", "Index", "Home")</p>
