--- a/Store/wwwroot/css/styles.css
+++ b/Store/wwwroot/css/styles.css
@@ -1,3 +1,78 @@
 body{
   text-align: center;
+  background-color: rgb(245, 246, 234);
+}
+
+a{
+  color: black;
+  font-weight: 400;
+}
+
+a:hover{
+  color: black;
+  font-weight: 400;
+  text-decoration: none;
+}
+h1{
+  margin-top: 5%;
+  margin-bottom: 7%;
+  font-family: 'Pacifico', cursive;
+  font-size: 4.625rem;
+  font-weight: 600;
+}
+h2{
+  font-family: 'Pacifico', cursive;
+  font-weight: 500;
+}
+h3{
+  margin-top: 5%;
+  margin-bottom: 7%;
+  font-family: 'Pacifico', cursive;
+  font-size: 2.625rem;
+  font-weight: 600;
+  color: black;
+}
+
+li{
+  font-family: 'Nunito', sans-serif;
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: black;
+  padding-right: 4%;
+  padding-top: 2%;
+  list-style: none;
+}
+
+p{
+  font-family: 'Nunito', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: black;
+  padding-top: 2%;
+}
+
+ul{
+  list-style: none;
+}
+
+.enlarge {
+  transition: transform .3s;
+  color: black;
+}
+
+.enlarge:hover {
+  transform: scale(1.1);
+  color: black;
+}
+
+.form-control{
+  text-align: center;
+  width: 13%;
+  margin: auto;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+#navbar{
+  background-color: rgb(245, 246, 234);
 }
