--- a/Store/Views/Account/Register.cshtml
+++ b/Store/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
 
 @model RegisterViewModel
 
-<h2>Register a new user</h2>
+<h1>Register a new user</h1>
 <hr />
 
 @if(!ViewData.ModelState.IsValid) 
@@ -16,16 +16,17 @@
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
-  @Html.LabelFor(user => user.Email)
-  @Html.TextBoxFor(user=> user.Email)
+  <h4>@Html.LabelFor(user => user.Email) @Html.TextBoxFor(user=> user.Email)</h4>
+  
+  <br>
 
-  @Html.LabelFor(user=> user.Password)
-  @Html.EditorFor(user=> user.Password)
+  <h4>@Html.LabelFor(user=> user.Password) @Html.EditorFor(user=> user.Password)</h4>
+  <br>
 
-  @Html.LabelFor(user=> user.ConfirmPassword)
-  @Html.EditorFor(user=> user.ConfirmPassword)
+  <h4>@Html.LabelFor(user=> user.ConfirmPassword) @Html.EditorFor(user=> user.ConfirmPassword)</h4>
+  <br>
 
-  <input type="submit" value="Register" />
+  <input type="submit" value="Register" class="btn btn-info"/>
 }
 
-<p>@Html.ActionLink("Back to accounts page", "Index")</p>
+<p class="enlarge">@Html.ActionLink("Back to accounts page", "Index")</p>
