--- a/Store/Views/Account/Index.cshtml
+++ b/Store/Views/Account/Index.cshtml
@@ -2,19 +2,19 @@
   Layout = "_Layout";
 }
 
-<h2>Authentication with Identity</h2>
+<h1>Authentication</h1>
 <hr />
 @if (User.Identity.IsAuthenticated)
 {
-  <p>Hello @User.Identity.Name!</p>
+  <h2>Hello @User.Identity.Name!</h2>
   @using (Html.BeginForm("LogOff", "Account"))
   {
-    <input type="submit" class="btn btn-default" value="Log out" />
+    <input type="submit" class="btn btn-default enlarge" value="Log out" />
   }
 }
 else
 {
-  <p>@Html.ActionLink("Register", "Register")</p>
-  <p>@Html.ActionLink("Log in", "Login")</p>
+  <p class="enlarge">@Html.ActionLink("Register", "Register")</p>
+  <p class="enlarge">@Html.ActionLink("Log in", "Login")</p>
 }
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<p class="enlarge">@Html.ActionLink("Home", "Index", "Home")</p>
