--- a/Store/Views/Treats/Index.cshtml
+++ b/Store/Views/Treats/Index.cshtml
@@ -13,10 +13,12 @@
 }
 else
 {
+  <ul style="margin-bottom: 4%;">
   @foreach(Treat treat in Model)
   {
-    <li>@Html.ActionLink($"{treat.TreatName}", "Details", new { id = treat.TreatId })</li>
+    <li class="enlarge">@Html.ActionLink($"{treat.TreatName}", "Details", new { id = treat.TreatId })</li>
   }
+  </ul>
 }
 
 <p class="enlarge">@Html.ActionLink("Create Treat", "Create", "Treats")</p>
