update redirect to details

--- a/Store/Views/Home/Index.cshtml
+++ b/Store/Views/Home/Index.cshtml
@@ -35,3 +35,5 @@
 <br>
 <p>@Html.ActionLink("Manage Treats", "Index", "Treats")</p>
 <p>@Html.ActionLink("Manage Flavors", "Index", "Flavors")</p>
+
+<p>@Html.ActionLink("Create or manage an account", "Index", "Account")</p>
