--- a/Store/Views/Shared/_Layout.cshtml
+++ b/Store/Views/Shared/_Layout.cshtml
@@ -8,8 +8,8 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="~/css/styles.css">
 </head>
 
@@ -27,7 +27,7 @@
 
       @* <a class="nav-link" style="margin-left: auto;">@Html.ActionLink("Log in", "Login", "Account")</a> *@
       @* <a class="nav-link">|@Html.ActionLink("Register", "Register", "Account")</a>
-      <a class="nav=link" style="margin-right: 1%;">@Html.ActionLink("Manage", "Index", "Account")</a> *@
+        <a class="nav=link" style="margin-right: 1%;">@Html.ActionLink("Manage", "Index", "Account")</a> *@
 
     </div>
   </nav>
