--- a/Store/Views/Home/Index.cshtml
+++ b/Store/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
 <br>
 <br>
 <br>
-<p>@Html.ActionLink("Manage Treats", "Index", "Treats")</p>
-<p>@Html.ActionLink("Manage Flavors", "Index", "Flavors")</p>
+<p class="enlarge">@Html.ActionLink("Manage Treats", "Index", "Treats")</p>
+<p class="enlarge">@Html.ActionLink("Manage Flavors", "Index", "Flavors")</p>
 
-<p>@Html.ActionLink("Create or manage an account", "Index", "Account")</p>
+<p class="enlarge">@Html.ActionLink("Create or manage an account", "Index", "Account")</p>
