--- a/Store/Views/Treats/AddFlavor.cshtml
+++ b/Store/Views/Treats/AddFlavor.cshtml
@@ -10,11 +10,10 @@
 {
   @Html.HiddenFor(model => model.TreatId)
 
-  @Html.Label("Select Flavor")
-  @Html.DropDownList("FlavorId")
+  <h3>@Html.Label("Select Flavor") @Html.DropDownList("FlavorId")</h3>
   <br>
 
-  <input type="submit" value="Add" class="btn btn-lg btn-info" style="margin-top: 4%;"/>
+  <input type="submit" value="Add" class="btn btn-lg btn-info" style="margin-bottom: 4%;"/>
 }
 
-<p>@Html.ActionLink("Back to Treats", "Index")</p>
+<p class="enlarge">@Html.ActionLink("Back to Treats", "Index")</p>
