--- a/Store/Views/Treats/Edit.cshtml
+++ b/Store/Views/Treats/Edit.cshtml
@@ -9,9 +9,8 @@
 {
   @Html.HiddenFor(model => model.TreatId)
   <li>Name: @Html.EditorFor(model => model.TreatName, new {placeholder = @Html.DisplayFor(model => model.TreatName)})</li>
-   @* <p>@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })</p> *@
   
-  <input type="submit" value="Edit" class="btn btn-lg btn-info" style="margin-bottom: 4%;"/>
+  <input type="submit" value="Edit" class="btn btn-lg btn-info" style="margin-top: 4%;, margin-bottom: 3%;"/>
 }
 
 <p class="enlarge">@Html.ActionLink("Back to Treats", "Index")</p>
